--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore database
 data/storage.db/storage.db
-.vercel/
+.vercel
+node_modules
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
