--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+anyio==4.3.0
 bidict==0.23.1
 blinker==1.8.2
+certifi==2024.2.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
@@ -8,15 +10,26 @@ Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httpx==0.27.0
+hyperframe==6.0.1
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+methoddispatch==3.0.2
+msgpack==1.0.8
 psycopg2-binary==2.9.9
+pyee==11.1.0
 python-dotenv==1.0.1
 python-engineio==4.9.0
 python-socketio==5.11.2
 simple-websocket==1.0.0
+sniffio==1.3.1
 SQLAlchemy==2.0.30
 typing_extensions==4.11.0
+websockets==12.0
 Werkzeug==3.0.3
 wsproto==1.2.0
