--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.log
 *.pyc
 __pycache__
+.pytest_cache
 
 # Environments 
 .env 
@@ -11,3 +12,6 @@ venv/
 ENV/ 
 env.bak/ 
 venv.bak/ 
+
+# Extra
+.coverage
