--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Neuro Nuggets
 
 on:
@@ -29,7 +26,7 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create temporary .env
-      env: # Or as an environment variable
+      env: 
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
       run: |
